# omp-FCNPC

./: .gitignore  CMakeLists.txt  README.md  build-msvc-clang.sh  port-status.md
.github/workflows/: build.yml
filterscripts/: fcnpc_test.pwn
include/: FCNPC.inc
src/: FCNPC.cpp  FCNPC.hpp  bridge.cpp  bridge.hpp  main.cpp  natives.cpp  natives_array.cpp
